users refactor
