# src/controllers/auth.ts
@@ -1,5 +1,5 @@
 import {Request, Response, NextFunction} from "express";
-import {AuthServices} from '../services';
+import {AuthServices, UserServices} from '../services';
 
 export const AuthController = {
 
@@ -13,6 +13,14 @@ export const AuthController = {
 
     login: async (req: Request, res: Response, next: NextFunction) => {
         const result = await AuthServices.login(req.body.username, req.body.password)
+            .catch((err: Error) => {
+                return next(err);
+            });
+        return res.json(result);
+    },
+
+    checkToken: async (req: Request, res: Response, next: NextFunction) => {
+        const result = await UserServices.isTokenValid(req.body.username, req.body.token)
             .catch((err: Error) => {
                 return next(err);
             });
