# src/models/Password.ts
@@ -2,7 +2,7 @@ import * as _ from 'lodash';
 import {EncryptionServices} from "../services";
 
 export class Password {
-    username: string;
+    userId: string;
     iterations: number;
     salt: string;
     hash: string;
@@ -10,7 +10,7 @@ export class Password {
     constructor(data?: any) {
         const password = !_.isNil(data) && !_.isNil(data.password) ? data.password : '';
 
-        this.username = !_.isNil(data) && !_.isNil(data.username) ? data.username : '';
+        this.userId = !_.isNil(data) && !_.isNil(data.userId) ? data.userId : '';
         this.iterations = !_.isNil(data) && !_.isNil(data.iterations) ? data.iterations : Math.floor(Math.random() * 1000);
         this.salt = !_.isNil(data) && !_.isNil(data.salt) ? data.salt : this.generateSalt();
         this.hash = !_.isNil(data) && !_.isNil(data.hash) ? data.hash : this.generateHash(password);
