# src/models/Token.ts
@@ -4,19 +4,19 @@ import {Config} from '../config';
 import {EncryptionServices} from "../services";
 
 export class Token {
-    username: string;
+    userId: string;
     hash: string;
     creation: string;
     expiration: string;
 
     constructor(data?: any) {
-        this.username = !_.isNil(data) && !_.isNil(data.username) ?
-            data.username : '';
+        this.userId = !_.isNil(data) && !_.isNil(data.userId) ?
+            data.userId : '';
         this.creation = !_.isNil(data) && !_.isNil(data.creation) ?
             data.creation : moment.utc().format();
         this.expiration = !_.isNil(data) && !_.isNil(data.expiration) ?
             data.expiration : moment.utc(this.creation).add(Config.token.expiration, 'days').format();
         this.hash = !_.isNil(data) && !_.isNil(data.hash) ?
-            data.hash : EncryptionServices.hash(this.username + this.creation + this.expiration, Config.encryption.iterations);
+            data.hash : EncryptionServices.hash(this.userId + this.creation + this.expiration, Config.encryption.iterations);
     }
 }
